Subscribe section height fixed on mobile

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -2773,7 +2773,7 @@ iframe{
 
     .healwithlove {
 
-        height: 230px;
+        height: 230px !important;
 
         background-size: cover;
 
